--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@ figure {
   text-align: center;
 }
 nav {
-  text-align: center;
+  text-align: center
+  color: grey;
 }
 a {
   padding-right: 10px;
